--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.2
 arabic-reshaper==3.0.0
 asn1crypto==1.5.1
 blinker==1.9.0
@@ -11,6 +12,7 @@ cssselect2==0.8.0
 et_xmlfile==2.0.0
 Flask==3.1.1
 Flask-SQLAlchemy==3.1.1
+Flask-Migrate==4.1.0
 greenlet==3.2.3
 html5lib==1.1
 idna==3.10
@@ -18,6 +20,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 lxml==6.0.0
 MarkupSafe==3.0.2
+Mako==1.3.10
 numpy==2.3.1
 openpyxl==3.1.5
 oscrypto==1.3.0
