--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.16.2
 arabic-reshaper==3.0.0
 asn1crypto==1.5.1
 blinker==1.9.0
@@ -10,6 +11,7 @@ cryptography==45.0.4
 cssselect2==0.8.0
 et_xmlfile==2.0.0
 Flask==3.1.1
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
 html5lib==1.1
@@ -17,6 +19,7 @@ idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 lxml==6.0.0
+Mako==1.3.10
 MarkupSafe==3.0.2
 numpy==2.3.1
 openpyxl==3.1.5
@@ -29,6 +32,7 @@ pyhanko-certvalidator==0.27.0
 pypdf==5.7.0
 python-bidi==0.6.6
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
 reportlab==4.4.2
